build.gradle now fixed